--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular-websocket": {
+    "kappa-talk-client": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
             "allowedCommonJsDependencies": [
               "sockjs-client"
             ],
-            "outputPath": "dist/vengeance-chat-client",
+            "outputPath": "dist/kappa-talk-client",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,6 +28,7 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
+              "src/vietnam.ico",
               "src/assets"
             ],
             "styles": [
@@ -67,24 +68,52 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "tunnel": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.tunnel.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-websocket:build"
+            "browserTarget": "kappa-talk-client:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angular-websocket-demo:build:production"
+              "browserTarget": "kappa-talk-client-demo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angular-websocket-demo:build"
+            "browserTarget": "kappa-talk-client-demo:build"
           }
         },
         "test": {
@@ -105,15 +134,11 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
             ]
           }
         },
@@ -121,16 +146,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-websocket-demo:serve"
+            "devServerTarget": "kappa-talk-client-demo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angular-websocket-demo:serve:production"
+              "devServerTarget": "kappa-talk-client-demo:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "angular-websocket-demo"
+  "defaultProject": "kappa-talk-client-demo",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
