--- a/package.json
+++ b/package.json
@@ -16,23 +16,26 @@
     "@angular/compiler": "^11.0.4",
     "@angular/core": "^11.0.4",
     "@angular/forms": "~11.0.4",
+    "@angular/localize": "^11.0.4",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "^11.0.4",
     "@angular/router": "~11.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngrx/component-store": "^10.1.2",
     "@ngrx/data": "^10.1.2",
     "@ngrx/effects": "^10.1.2",
     "@ngrx/entity": "^10.1.2",
     "@ngrx/router-store": "^10.1.2",
     "@ngrx/store": "^10.1.2",
-    "@stomp/ng2-stompjs": "^8.0.0",
-    "@stomp/rx-stomp": "^1.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "@stomp/stompjs": "^6.0.0",
+    "sockjs-client": "^1.5.0",
+    "@types/sockjs-client": "^1.5.0",
+    "@types/stompjs": "^2.3.4",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "net": "^1.0.2",
     "rxjs": "~6.6.3",
-    "sockjs-client": "^1.5.0",
     "tslib": "^2.0.3",
     "zone.js": "~0.11.3"
   },
