--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.4",
+    "@angular/cdk": "^11.2.5",
     "@angular/common": "~11.0.4",
     "@angular/compiler": "^11.0.4",
     "@angular/core": "^11.0.4",
@@ -29,13 +30,13 @@
     "@ngrx/store": "^10.1.2",
     "@ngrx/store-devtools": "^11.0.1",
     "@stomp/stompjs": "^6.0.0",
-    "sockjs-client": "^1.5.0",
     "@types/sockjs-client": "^1.5.0",
     "@types/stompjs": "^2.3.4",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
     "net": "^1.0.2",
     "rxjs": "~6.6.3",
+    "sockjs-client": "^1.5.0",
     "tslib": "^2.0.3",
     "zone.js": "~0.11.3"
   },
@@ -46,7 +47,7 @@
     "@angular-eslint/eslint-plugin-template": "1.0.0",
     "@angular-eslint/schematics": "1.0.0",
     "@angular-eslint/template-parser": "1.0.0",
-    "@angular/cli": "^11.0.4",
+    "@angular/cli": "^11.2.5",
     "@angular/compiler-cli": "^11.0.4",
     "@angular/language-service": "~11.0.4",
     "@ngrx/schematics": "^10.1.2",
